# openshorts

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  editor.py  llm_client.py  main.py  pyproject.toml  requirements.txt  test_pipeline.py  thumbnail.py  translate.py
dashboard/: eslint.config.js  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx
dashboard/src/components/: Gallery.jsx  GalleryCard.jsx  MediaInput.jsx  ProcessingAnimation.jsx  ResultCard.jsx  SaaShortsTab.jsx  SubtitleModal.jsx  ThumbnailStudio.jsx  TranslateModal.jsx
docs/slides/: presentation.html
